force-app/main/default/objects/cgcloud__Account_Set_Account__c/cgcloud__Account_Set_Account__c.object-meta.xml
<CustomObject>
    <description>Junction object between Customer and Customer Set.</description>
    <label>Customer Set Customer</label>
    <nameField>
        <displayFormat>ASA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Set Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>