force-app/main/default/objects/cgcloud__Account_Set_Account__c/fields/cgcloud__Account_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Set__c</fullName>
    <description>Reference to Customer Set.</description>
    <label>Customer Set</label>
    <referenceTo>cgcloud__Account_Set__c</referenceTo>
    <relationshipLabel>Customer Set Customers</relationshipLabel>
    <relationshipName>Account_Set_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>