force-app/main/default/objects/cgcloud__Account_Set_Account__c/fields/cgcloud__Account_Set_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Set_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Customer.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Set Customers (Customer)</relationshipLabel>
    <relationshipName>Account_Set_Account</relationshipName>
    <type>Lookup</type>
</CustomField>