force-app/main/default/objects/cgcloud__Account_Set_Account__c/validationRules/cgcloud__Compare_Customer_Set_Customer_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Compare_Customer_Set_Customer_Sales_Org</fullName>
    <active>true</active>
    <description>The Customer and the Customer Set must have the same Sales Org.</description>
    <errorConditionFormula>AND(
          NOT(ISBLANK(cgcloud__Account_Set_Account__c)),
          TEXT(cgcloud__Account_Set_Account__r.cgcloud__Account_Template__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Account_Set__r.cgcloud__Sales_Org__c)
          )</errorConditionFormula>
    <errorMessage>The Customer and the Customer Set must have the same Sales Org.</errorMessage>
</ValidationRule>